--- a/index.html
+++ b/index.html
@@ -9,93 +9,6 @@
 	<meta name="description" content="A simple tool to get the ID of a Soundcloud track or playlist.">
 	<meta name="author" content="Merlin Schumacher">
 	<style>
-		span[class*="icss-"] {
-			position: relative;
-			display: inline-block;
-			font-style: normal;
-			box-sizing: border-box;
-			font-size: 1.5rem;
-			cursor: pointer;
-			float: right;
-			top: .5em;
-			background: white;
-			left: .6rem;
-		}
-
-		span[class*="icss-"]::before,
-		span[class*="icss-"]::after {
-			content: "";
-			border-width: 0;
-			position: absolute;
-			box-sizing: border-box;
-		}
-
-		span.icss-x-circle-o {
-			width: 1em;
-			height: 1em;
-			border-radius: 50%;
-			box-shadow: inset 0 0 0 .1em;
-			margin: 0;
-		}
-
-		span.icss-x-circle-o:after,
-		span.icss-x-circle-o:before {
-			width: .16em;
-			height: .7em;
-			background-color: currentColor;
-			border-radius: .1em;
-			transform: translate(-50%, -50%) rotate(-135deg);
-			top: 50%;
-			left: 50%;
-		}
-
-		span.icss-x-circle-o:after {
-			transform: translate(-50%, -50%) rotate(-45deg);
-		}
-
-
-		.gg-copy {
-			box-sizing: border-box;
-			position: relative;
-			display: block;
-			transform: scale(var(--ggs, 1));
-			width: 14px;
-			height: 18px;
-			border: 2px solid;
-			margin-left: -5px;
-			margin-top: -4px
-		}
-
-		.gg-copy::after,
-		.gg-copy::before {
-			content: "";
-			display: block;
-			box-sizing: border-box;
-			position: absolute
-		}
-
-		.gg-copy::before {
-			background:
-				linear-gradient(to left,
-					currentColor 5px, transparent 0) no-repeat right top/5px 2px,
-				linear-gradient(to left,
-					currentColor 5px, transparent 0) no-repeat left bottom/ 2px 5px;
-			box-shadow: inset -4px -4px 0 -2px;
-			bottom: -6px;
-			right: -6px;
-			width: 14px;
-			height: 18px
-		}
-
-		.gg-copy::after {
-			width: 6px;
-			height: 2px;
-			background: currentColor;
-			left: 2px;
-			top: 2px;
-			box-shadow: 0 4px 0, 0 8px 0
-		}
-
 		html {
 			box-sizing: border-box;
 			font-size: 16px;
@@ -130,7 +43,7 @@
 			color: #999;
 			font-size: 0.85rem;
 			padding-bottom: .5rem;
-			border-bottom: 1px solid #f2f2f2;
+			border-bottom: 1px solid #cacaca;
 		}
 
 		ol,
@@ -147,6 +60,107 @@
 		img {
 			max-width: 100%;
 			height: auto;
+		}
+
+		span[class*="icss-"] {
+			position: relative;
+			display: inline-block;
+			font-style: normal;
+			box-sizing: border-box;
+			font-size: 1.5rem;
+			cursor: pointer;
+			float: right;
+			top: .5em;
+			background: white;
+			left: .6rem;
+			transition: all .5s;
+		}
+
+		span[class*="icss-"]::before,
+		span[class*="icss-"]::after {
+			content: "";
+			border-width: 0;
+			position: absolute;
+			box-sizing: border-box;
+			transition: all .5s;
+		}
+
+		span.icss-x-circle-o {
+			width: 1em;
+			height: 1em;
+			border-radius: 50%;
+			box-shadow: inset 0 0 0 .1em;
+			margin: 0;
+		}
+
+		span.icss-x-circle-o:after,
+		span.icss-x-circle-o:before {
+			width: .16em;
+			height: .7em;
+			background-color: currentColor;
+			border-radius: .1em;
+			transform: translate(-50%, -50%) rotate(-135deg);
+			top: 50%;
+			left: 50%;
+
+		}
+
+		span.icss-x-circle-o:hover {
+			box-shadow: inset 0 0 0 .1em #ff0000;
+		}
+
+		span.icss-x-circle-o:hover:after,
+		span.icss-x-circle-o:hover:before {
+			background-color: #ff0000;
+		}
+
+		span.icss-x-circle-o:after {
+			transform: translate(-50%, -50%) rotate(-45deg);
+		}
+
+
+		.gg-copy {
+			box-sizing: border-box;
+			position: relative;
+			display: block;
+			transform: scale(var(--ggs, 1));
+			width: 14px;
+			height: 18px;
+			border: 2px solid;
+			margin-left: -5px;
+			margin-top: -4px;
+			transition: all .5s;
+		}
+
+		.gg-copy::after,
+		.gg-copy::before {
+			content: "";
+			display: block;
+			box-sizing: border-box;
+			position: absolute;
+			transition: all .5s;
+		}
+
+		.gg-copy::before {
+			background:
+				linear-gradient(to left,
+					currentColor 5px, transparent 0) no-repeat right top/5px 2px,
+				linear-gradient(to left,
+					currentColor 5px, transparent 0) no-repeat left bottom/ 2px 5px;
+			box-shadow: inset -4px -4px 0 -2px;
+			bottom: -6px;
+			right: -6px;
+			width: 14px;
+			height: 18px
+		}
+
+		.gg-copy::after {
+			width: 6px;
+			height: 2px;
+			background: currentColor;
+			left: 2px;
+			top: 2px;
+			box-shadow: 0 4px 0, 0 8px 0
 		}
 
 		#frame {
@@ -213,21 +227,41 @@
 
 		#toast {
 			visibility: hidden;
-			max-width: 50px;
-			height: 50px;
+			max-width: 11em;
+			width: auto;
+			padding: .5em;
 			margin: auto;
-			background-color: #333;
-			color: #fff;
+			background-color: #ffffff;
+			color: #000000;
 			text-align: center;
 			border-radius: 2px;
-
 			position: fixed;
 			z-index: 1;
 			left: 0;
 			right: 0;
-			bottom: 30px;
-			font-size: 17px;
+			top: -5rem;
+			font-size: 1.2rem;
 			white-space: nowrap;
+			box-shadow: 0px 3px 8px 1px #ff5500;
+			opacity: 0;
+			transition: top .25s linear 0s;
+			border-radius: 4px;
+		}
+
+		#toast.visible {
+			visibility: visible;
+			opacity: 1;
+			top: 1rem;
+		}
+
+		aside,
+		aside a {
+			color: #999;
+		}
+
+		aside {
+			font-size: .7rem;
+			text-align: center;
 		}
 	</style>
 </head>
@@ -239,12 +273,10 @@
 		</div>
 		<h1>Get Soundcloud ID</h1>
 		<p>
-			Since about 2018 it's not possible anymore to get the ID of a Soundcloud page, like a playlist, user or song
-			via
-			their API. This tool makes getting the ID easier.
+			Since about 2018 it's not possible anymore to get the ID of a Soundcloud page, like a playlist, user or
+			song, via their API. This tool makes getting the ID easier.
 			You'll might need this tool if you want to integrate a Soundcloud plugin for a content management system
-			like
-			Wordpress or a static site generator like Jekyll.
+			like Wordpress or a static site generator (like Jekyll).
 		</p>
 		<ol>
 			<li>Copy the Soundcloud embed code</li>
@@ -252,7 +284,8 @@
 			<li>Click the button</li>
 		</ol>
 		<span class="icss-x-circle-o" onclick="emptyEmbed()"></span>
-		<textarea id="embed" onchange="convertId()" placeholder="Paste your embed code here..."></textarea>
+		<textarea id="embed" autocomplete="off" onchange="convertId()"
+			placeholder="Paste your embed code here..."></textarea>
 		<button onclick="convertId()">Convert to ID</button>
 		<div class="inputgroup">
 			<label for="id">ID: </label>
@@ -264,6 +297,9 @@
 			<input id="type" readonly placeholder="Type of element" />
 			<span onclick="copy(this)" class="gg-copy"></span>
 		</div>
+		<aside>by <a target="_blank" href="https://merlinschumacher.de">Merlin Schumacher</a>. <a target="_blank"
+				href="https://github.com/merlinschumacher/get-soundcloud-id">Sources on
+				GitHub<a />.<br /> Not affiliated with Soundcloud.</aside>
 		<script>
 			function convertId() {
 				let embedCode = document.getElementById("embed").value;
@@ -274,7 +310,7 @@
 					id.value = groups.id;
 					type.value = groups.type;
 				} catch (e) {
-					alert("Failed to extract ID.");
+					toast("Could not convert!");
 					console.log(e);
 				}
 			}
@@ -283,15 +319,18 @@
 				input.select();
 				input.setSelectionRange(0, 99999);
 				document.execCommand("copy");
+				toast("Copied!");
 			}
 			function emptyEmbed() {
 				document.getElementById("embed").value = "";
+				toast("Cleared!");
 			}
 
-			function launch_toast() {
-				var x = document.getElementById("toast")
-				x.className = "show";
-				setTimeout(function () { x.className = x.className.replace("show", ""); }, 5000);
+			function toast(text) {
+				let toast = document.getElementById("toast");
+				toast.innerText = text;
+				toast.className = "visible";
+				setTimeout(function () { toast.className = toast.className.replace("visible", ""); }, 2000);
 			}
 		</script>
 	</div>
